<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">


    <ImageView
        android:id="@+id/Main_BG"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:background="@drawable/main_bg_p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:alpha=".75"
        app:cardCornerRadius="20dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_bg"
            android:padding="20dp">

            <TextView
                android:id="@+id/matchDetailTitleID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/match_details"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/teamNumberID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/team"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/team_number"
                android:inputType="number"
                android:maxLength="5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/matchDetailTitleID" />

            <TextView
                android:id="@+id/teamNumberHintID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_number_hint"
                android:textColor="@color/colorHint"
                app:layout_constraintStart_toStartOf="@+id/teamNumberID"
                app:layout_constraintTop_toBottomOf="@+id/teamNumberID" />

            <EditText
                android:id="@+id/matchNumberID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/robot"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/match_number"
                android:inputType="number"
                android:maxLength="3"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teamNumberHintID" />

            <TextView
                android:id="@+id/matchNumberHintID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_number_hint"
                android:textColor="@color/colorHint"
                app:layout_constraintStart_toStartOf="@+id/matchNumberID"
                app:layout_constraintTop_toBottomOf="@+id/matchNumberID" />

            <ImageView
                android:id="@+id/teleAllianceFlagID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/DS_splash_page"
                android:padding="3dp"
                app:layout_constraintStart_toStartOf="@+id/matchNumberID"
                app:layout_constraintTop_toBottomOf="@+id/matchNumberHintID"
                app:srcCompat="@drawable/flag_icon" />

            <TextView
                android:id="@+id/allianceHintID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_alliance"
                android:textColor="@color/colorHint"
                app:layout_constraintStart_toStartOf="@+id/teleAllianceFlagID"
                app:layout_constraintTop_toBottomOf="@+id/teleAllianceFlagID" />

            <RadioGroup
                android:id="@+id/teamRadioGroupID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:orientation='horizontal'
                app:layout_constrainedHeight="false"
                app:layout_constraintStart_toEndOf="@+id/teleAllianceFlagID"
                app:layout_constraintTop_toBottomOf="@+id/matchNumberHintID">

                <RadioButton
                    android:id="@+id/redTeamID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/red_alliance"
                    android:textColor="@color/colorBlack"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/blueTeamID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:text="@string/blue_alliance"
                    android:textColor="@color/colorBlack"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </RadioGroup>

            <Button
                android:id="@+id/autoButtonID"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_grid_disabled"
                android:drawableStart="@drawable/arrow_right_black"
                android:drawableLeft="@drawable/arrow_right_black"
                android:drawablePadding="8dp"
                android:enabled="false"
                android:labelFor="@+id/matchDetailTitleID"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp"
                android:text="@string/auto_btn"
                android:textColor="@color/colorTextDisabledButton"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/allianceHintID" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="151dp" />

            <Button
                android:id="@+id/autoSearchBtnID"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_grid_disabled"
                android:drawableStart="@drawable/search_black"
                android:drawableLeft="@drawable/search_black"
                android:drawablePadding="10dp"
                android:enabled="false"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="1dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:text="@string/auto_search_btn"
                android:textColor="@color/colorTextDisabledButton"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/autoButtonID" />

            <Button
                android:id="@+id/autoClearBtnID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_grid_disabled"
                android:drawableStart="@drawable/cross_black"
                android:drawableLeft="@drawable/cross_black"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="1dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:text="@string/auto_clear_btn"
                android:textColor="@color/colorTextDisabledButton"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/autoButtonID" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>